ISPN-244 - Enable external user/framework defined Externalizers
* Marshallable became Marshalls and now applies to Externalizers.
* Configuration now talks about configuring externalizers and not
marshallables.
* Added helper methods to GlobalConfiguration to make registration of
externalizers a lot more user friendly.